[package]
name = "mcfind"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.46", features = ["derive"] }
fastanvil = "0.32.0"
fastnbt = "2.6.0"
indicatif = "0.18.0"
rayon = "1.11.0"
serde = { version = "1.0.219", features = ["derive"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
